--- a/styles.css
+++ b/styles.css
@@ -6,14 +6,11 @@
 
 body {
     font-family: system-ui;
-    color: #fff;
-    background: linear-gradient(0deg,
-            rgba(0, 0, 0, 0.5),
-            rgba(0, 0, 0, 0.5));
 }
 
 .title {
     font-size: 3em;
+    color: #fff;
 }
 
 a {
@@ -39,6 +36,10 @@ a {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
+}
+
+.bienvenida {
+    color: #fff;
 }
 
 .login,
